<resources>
    <string name="app_name">IG-Remake</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="new_here">New here?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="email">Email</string>
    <string name="select_photo">Select Photo</string>
    <string name="messages">Messages</string>
    <string name="sign_out">Sign Out</string>
    <string name="new_message">New Message</string>
    <string name="select_user">Select User</string>
</resources>